# rust_tts

./: Cargo.toml  README.md
src/: main.rs  sink.rs  tts.rs
