[package]
name = "audio_output"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17"
reqwest = "0.11"
urlencoding = "2.0"
base64 = "0.21"
blocking = "1.3"
ureq = "2.1"
itertools = "0.11"
ctrlc = "3.3.0"
colored = "2.0"
